--- a/registrationwebapp/index.html
+++ b/registrationwebapp/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
     <head>
@@ -29,6 +28,7 @@
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script src="dependencies/web3.min.js"></script>
         <script src="dependencies/truffle-contract.js"></script>
+        <script src="web3/abi.js"></script>
         <script src="web3/register.js"></script>
         
 
