Static Progress Bar

--- a/registrationwebapp/rwa.html
+++ b/registrationwebapp/rwa.html
@@ -57,9 +57,14 @@
 											<label for="name">Name</label>
 											<input type="text" name="name" id="name" placeholder="Name"/>
 										</div>
-										<ul class="actions">
-											<li><a href="" class="button submit">Submit</a></li>
-										</ul>
+										<div id="myProgress">
+											<div id="myBar"></div>
+										</div>
+										<button onclick="move()">Submit</button>
+										<!--<ul class="actions">
+											<li><a href="" class="button">Submit</a></li>
+										</ul> -->
+										</div>
 									</form>
 								</section>
 							</div>
@@ -132,8 +137,10 @@
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/bootstrap.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
+			<script src="assets/js/bar.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
 
