small rwa change

--- a/registrationwebapp/rwa.html
+++ b/registrationwebapp/rwa.html
@@ -60,6 +60,7 @@
 										<div id="myProgress">
 											<div id="myBar"></div>
 										</div>
+										<br>
 										<button onclick="move()">Submit</button>
 										<!--<ul class="actions">
 											<li><a href="" class="button">Submit</a></li>
@@ -143,6 +144,9 @@
 			<script src="assets/js/bar.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
-
+			<script src="dependencies/web3.min.js"></script>
+        	<script src="dependencies/truffle-contract.js"></script>
+        	<script src="web3/abi.js"></script>
+        	<script src="web3/register.js"></script>
 	</body>
 </html>
