--- a/registrationwebapp/index.html
+++ b/registrationwebapp/index.html
@@ -36,9 +36,8 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1 class="major">NoPass</h1>
-							<p>NoPass's unique use of blockchain technology provides a myriad of benefits over <br />
-								conventional username/password systems.</p>
+							<h1 class="major">nomen</h1>
+							<p>nomen is your passport to Web 3.0. As we have long suspected, Big Tech has failed to protect our privacy. In the wake of Big Tech's privacy scandal, it all more apparentthe world needs a decentralized login service more than ever bo become all the more apparent. Nomen's unique use of blockchain technology provides a myriad of benefits over conventional username/password systems.</p>
 						</div>
 					</section>
 				
@@ -55,7 +54,8 @@
 										</div>
                                         <p id="loading" style="display: none;">Registering you on the Ethereum blockchain. You may need to approve this transaction in MetaMask.</p>
                                         <div class="loader"></div>
-                                        <p id="confirm_registered" style="display:none;">Hello</p>
+                                        <p id="confirm_registered" style="display:none;"></p>
+                                        <p id="need_metamask" style="display:none;">In order to use nomen, you will need to have the MetaMask plugin installed in your browser. Connect to Web 3.0 today at <a href="metamask.io">metamask.io.</a></p>
 										<br>
 										<button type=button id="registerButton" style="font-size:14px;">Register</button>
 										<!--<ul class="actions">
