No metamask text + script added

--- a/registrationwebapp/index.html
+++ b/registrationwebapp/index.html
@@ -57,6 +57,7 @@
                                         <div class="loader"></div>
                                         <p id="confirm_registered" style="display:none;">Hello</p>
 										<br>
+                                        <p id="need_metamask" style="display:none;">In order to use Nomen, you will need to have the MetaMask plugin installed in your browser. Connect to Web 3.0 today at <a href="metamask.io">metamask.io.</a></p>
 										<button type=button id="registerButton" style="font-size:14px;">Register</button>
 										<!--<ul class="actions">
 											<li><a href="" class="button">Submit</a></li>
@@ -120,7 +121,8 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>Nomen, HackPrinceton 2k18</li>
+						<li>Nomen, by Reilly Bova, June Ho Park, Michael Man, Sten Sjöberg</li>
+                        <li>HackPrinceton 2018 Spring</li>
 					</ul>
 				</div>
 			</footer>
