--- a/registrationwebapp/index.html
+++ b/registrationwebapp/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>DAS &mdash; Decentralized Security</title>
+		<title>NOMEN &mdash; Decentralized Security</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -23,8 +23,8 @@
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
 							<li><a href="#one">Register</a></li>
-							<li><a href="#two">What it is</a></li>
-							<li><a href="#three">Who we are</a></li>
+							<li><a href="#two">Why nomen?</a></li>
+							<li><a href="#three">Our Team</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -36,15 +36,15 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1 class="major">nomen</h1>
-							<p>nomen is your passport to Web 3.0. As we have long suspected, Big Tech has failed to protect our privacy. In the wake of Big Tech's privacy scandal, it all more apparentthe world needs a decentralized login service more than ever bo become all the more apparent. Nomen's unique use of blockchain technology provides a myriad of benefits over conventional username/password systems.</p>
+							<h1 class="major"><img src="images/nomen.png" width="15%" height="15%" align="middle">nomen</h1>
+							<p>nomen is your passport to Web 3.0. The events of the past few weeks have all but confirmed our long-held suspicions that Big Tech does not respect our privacy. As the first Decentralized Authentication Service (DAS), nomen allows you to login to all your favorite websites with a click of a button both privately and securely. Using Ethereum smart contracts, nomen establishes and maintains a decentralized ledger of accounts using of blockchain technology, thereby providing a myriad of benefits over conventional username/password systems.</p>
 						</div>
 					</section>
 				
 				<!-- One -->
 				<section id="one" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2 id="title">Get registered now!</h2>
+							<h2 id="title">Register Today!</h2>
 							<p id="welcome">Register your name on the blockchain. You'll need to have MetaMask installed.</p>
 							<div class="split style1">
 								<section>
@@ -52,10 +52,6 @@
 										<div class="field" id="reg_field">
 											<input type="text" name="name" id="name" placeholder="Insert your name here"/>
 										</div>
-                                        <p id="loading" style="display: none;">Registering you on the Ethereum blockchain. You may need to approve this transaction in MetaMask.</p>
-                                        <div class="loader"></div>
-                                        <p id="confirm_registered" style="display:none;"></p>
-                                        <p id="need_metamask" style="display:none;">In order to use nomen, you will need to have the MetaMask plugin installed in your browser. Connect to Web 3.0 today at <a href="metamask.io">metamask.io.</a></p>
 										<br>
 										<button type=button id="registerButton" style="font-size:14px;">Register</button>
 										<!--<ul class="actions">
@@ -64,7 +60,13 @@
 										</div>
                                         -->
 									</form>
+                                    <p id="loading" style="display: none;">Registering you on the Ethereum blockchain. You may need to approve this transaction in MetaMask.</p>
+                                    <div class="loader"></div>
+                                    <p id="confirm_registered" style="display:none;"></p>
+                                    <p id="need_metamask" style="display:none;">In order to use nomen, you will need to have the MetaMask plugin installed in your browser. Connect to Web 3.0 today at <a href="metamask.io">metamask.io.</a></p>
+
 								</section>
+                                <img src="images/metamask.png" id="metamast_img" style="display:none;" width="25%" height="25%" alt="" align="right">
 							</div>
 						</div>
 					</section>
@@ -72,28 +74,28 @@
 				<!-- Two -->
 				<section id="two" class="wrapper style2 fade-up">
 						<div class="inner">
-							<h2>What it is</h2>
-							<p>NoPass uses blockchain technology to create a universal password system that creates a digital passport for you.</p>
+							<h2>Why nomen?</h2>
+							<p></p>
 							<div class="features">
 								<section>
 									<span class="icon major fa-lock"></span>
-									<h3>Secure</h3>
-									<p>No more Cambridge Analytica.</p>
+									<h3>Private</h3>
+									<p>No more 3rd party tracking. No more Cambridge Analytica. No more Big Brother. Through nomen, logging-in is a transaction between you, the website you are accessing, and no one else.</p>
 								</section>
 								<section>
 									<span class="icon major fa-user"></span>
 									<h3>Authenticated</h3>
-									<p>Thanks to Ethereum, all users are authenticated.</p>
+									<p>All users are securely authenticated via the Ethereum blockchain. The only way for an attacker to spoof your account is to hijack your protected Ethereum wallet.</p>
 								</section>
 								<section>
 									<span class="icon major fa-chrome"></span>
 									<h3>Universal</h3>
-									<p>You don't have to make individual accounts for each website.</p>
+									<p>One nomen, all of Web 3.0. Gone are the days of struggling to remember your passwords for dozens of different sites. With a click of a button, nomen grants you access to all of your favorite (supported) websites. </p>
 								</section>
 								<section>
 									<span class="icon major fa-desktop"></span>
-									<h3>Simple Interface</h3>
-									<p>Despite the complexity of executing smart contracts on the Ethereum blockchain, NoPass's simple interface makes this powerful technology accessible to anyone.</p>
+									<h3>Accessible</h3>
+									<p>nomen was designed to be as easy to use as possible. Despite the behind-the-scenes complexity of blockchain authentication and integration, nomen's simple, streamlined interface makes the powerful technology accessible to everyone.</p>
 								</section>
 							</div>
 						</div>
@@ -102,11 +104,11 @@
 				<!-- Three -->
 					<section id="three" class="wrapper style1 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/frick.jpg" alt="" data-position="center center" /></a>
+                            <img src="images/portraits.png" width="40%" height="40%" align="middle">
 							<div class="content">
 								<div class="inner">
-									<h2>Who we are</h2>
-									<p>We're dedicated Princeton students wanting to change the world with the power of blockchain.</p>
+									<h2>Our Team</h2>
+									<p>nomen was conceptualized and developed by Michael Man '21, Reilly Bova '20, June Ho Park '20, & Sten Sjoberg '21 during the Spring 2018 Hack Princeton conference.</p>
 								</div>
 							</div>
 						</section>
