--- a/registrationwebapp/index.html
+++ b/registrationwebapp/index.html
@@ -69,7 +69,7 @@
                                     <p id="need_metamask" style="display:none;">In order to use nomen, you will need to have the MetaMask plugin installed in your browser. Connect to Web 3.0 today at <a href="metamask.io">metamask.io.</a></p>
 
 								</section>
-                                <img src="images/metamask.png" id="metamast_img" style="display:none;" width="25%" height="25%" alt="" align="right">
+                                <img src="images/metamask.png" id="metamast_img" style="display:none; margin-top:-100px;" width="25%" height="25%" alt="" align="right">
 							</div>
 						</div>
 					</section>
